--- a/frontend/src/TimerApp.css
+++ b/frontend/src/TimerApp.css
@@ -1,7 +1,7 @@
 body {
-  font-family: 'Arial', sans-serif;
-  /* background: linear-gradient(135deg, #f5f7fa, #c3cfe2); */
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  font-family: "Arial", sans-serif;
+  background-color: #ffffff;
+  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
   margin: 0;
   padding: 0;
   display: flex;
@@ -9,6 +9,7 @@ body {
   align-items: center;
   box-sizing: border-box;
   overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow-y: hidden;
 }
 
 h1 {
@@ -18,7 +19,7 @@ h1 {
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   padding: 8px 12px;
@@ -78,7 +79,7 @@ input {
   flex-grow: 1;
   overflow-y: auto;
   padding: 20px;
-  background: #f9f9f9;
+  background: #00000017;
 }
 
 .note {
