--- a/frontend/src/TimerApp.css
+++ b/frontend/src/TimerApp.css
@@ -27,8 +27,10 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 0.9rem;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   flex-shrink: 1;
+  width: 68px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Very light shadow */
 }
 
 button:hover {
