--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -88,7 +88,7 @@ body {
 /* ------------------------- */
 
 .btn {
-  background: linear-gradient(145deg, #f9fafb, #f3f4f6);
+  background: #4caf50;
   color: #000000;
   padding: 12px;
   border: none;
@@ -100,7 +100,7 @@ body {
 }
 
 .btn:hover {
-  background: white;
+  background: #45a049;
   transform: translateY(-2px);
 }
 
@@ -116,14 +116,14 @@ p {
 }
 
 .link {
-  color: #ee7410;
+  color: #ff0000;
   font-weight: 600;
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
 .link:hover {
-  color: #f18933;
+  color: #ce1717;
 }
 
 /* Анимация появления */
