--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -88,7 +88,8 @@ body {
 /* ------------------------- */
 
 .btn {
-  background: #4caf50;
+  background: #f3f4f6;
+  border: 1px solid #e5e7eb;
   color: #000000;
   padding: 12px;
   border: none;
@@ -97,10 +98,16 @@ body {
   font-size: 1rem;
   font-weight: 500;
   transition: background 0.3s ease, transform 0.15s ease;
+  /*----------- */
+  white-space: nowrap;
+  display: inline-flex;
+  justify-content: center;
 }
 
 .btn:hover {
-  background: #45a049;
+  background: white;
+  border-color: #cbd5e1;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
   transform: translateY(-2px);
 }
 
@@ -116,14 +123,14 @@ p {
 }
 
 .link {
-  color: #ff0000;
+  color: #ce1717;
   font-weight: 600;
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
 .link:hover {
-  color: #ce1717;
+  color: #ff0000;
 }
 
 /* Анимация появления */
