--- a/frontend/src/styles/timer.css
+++ b/frontend/src/styles/timer.css
@@ -99,8 +99,27 @@ textarea:focus {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  position: relative; /* нужно для абсолютного позиционирования кнопки */
+}
+/* ------------------------------ */
+.calendar-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #eec660;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.3s;
+  width: 43px;
 }
 
+.calendar-button:hover {
+  background: #e6c164;
+}
+/* ------------------------------ */
 .button-container {
   display: flex;
   flex-wrap: nowrap;
