--- a/frontend/src/styles/timer.css
+++ b/frontend/src/styles/timer.css
@@ -106,18 +106,18 @@ textarea:focus {
   position: absolute;
   top: 10px;
   right: 10px;
-  background: #eec660;
+  background: white;
   border: none;
   cursor: pointer;
   padding: 8px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   transition: background-color 0.3s;
   width: 43px;
 }
 
 .calendar-button:hover {
-  background: #e6c164;
+  background: #f0f0f0;
 }
 /* ------------------------------ */
 .button-container {
