--- a/frontend/src/styles/calendar.css
+++ b/frontend/src/styles/calendar.css
@@ -56,10 +56,9 @@ body {
 }
 
 .month-button.highlighted {
-  border: 2px solid #3b82f6;
+  border: 1px solid #3b82f6;
   background: linear-gradient(145deg, #dbeafe, #bfdbfe);
   color: #1d4ed8;
-  font-weight: 600;
   box-shadow: 0 4px 12px rgba(59, 130, 246, 0.35);
 }
 
@@ -100,7 +99,8 @@ body {
   transform: scale(0.96);
 }
 
-.days-of-week, .days-grid {
+.days-of-week,
+.days-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   text-align: center;
@@ -114,7 +114,7 @@ body {
 .day-cell {
   padding: 0.5rem;
   border: 1px solid #eee;
-  min-height: 35px;
+  min-height: 34.4px;
   min-width: 34.4px;
   display: flex;
   justify-content: center;
@@ -125,6 +125,7 @@ body {
   background: #dbeafe;
   border-color: #3b82f6;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .close-btn {
@@ -154,9 +155,6 @@ body {
   gap: 0.4rem; /* расстояние между ←, годом и → */
 }
 
-
-
-
 /* Адаптивность */
 @media (max-width: 640px) {
   .month-grid {
@@ -166,5 +164,16 @@ body {
   .day-cell {
     min-height: 30px;
     font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .day-cell {
+    min-height: 23px;
+    min-width: 23px;
+  }
+
+  .calendar-container {
+    width: 290px;
   }
 }
